--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -4,35 +4,30 @@
   font-family: "NanumGothic";
   font-style: normal;
   font-weight: 400;
-  /*src: url("../../_share/fonts/NanumGothic-Regular.woff") format("woff");*/
 }
 
 @font-face {
   font-family: "NanumGothic";
   font-style: normal;
   font-weight: 600;
-  /*src: url("../../_share/fonts/NanumGothic-Bold.woff") format("woff");*/
 }
 
 @font-face {
   font-family: "NanumSquare";
   font-style: normal;
   font-weight: 300;
-  /*src: url("../../_share/fonts/NanumSquare-Light.woff") format("woff");*/
 }
 
 @font-face {
   font-family: "NanumSquare";
   font-style: normal;
   font-weight: 400;
-  /*src: url("../../_share/fonts/NanumSquare-Regular.woff") format("woff");*/
 }
 
 @font-face {
   font-family: "NanumSquare";
   font-style: normal;
   font-weight: 600;
-  /*src: url("../../_share/fonts/NanumSquare-Bold.woff") format("woff");*/
 }
 
 /* default */
@@ -4898,7 +4893,7 @@ p.text-valid:before {
   top: -4px;
   width: 41px;
   height: 7px;
-  background: url(../../_share/img/common/box-guide-decoration@2x.png) no-repeat;
+  background: url(https://sev.severance.healthcare/_res/yuhs/_share/img/common/box-guide-decoration@2x.png) no-repeat;
   background-size: cover;
 }
 
