--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -77,7 +77,7 @@
                     <img th:src="@{/assets/images/main7.jpg}" class="d-block w-100" alt="..." id="banner">
                     <div class="carousel-caption d-none d-md-block" style="margin-bottom:130px;padding-left:-20px">
                         <h2 class="display-5 fw-bolder text-white mb-2">
-                            ESL-system 도입으로 <br>예약을 편리하게
+                            최상의 의료서비스 <br>최상의 정보, 교육, 연구 네트워크
                         </h2>
 
                         <h5 class="lead text-white mb-4">질병 치료를 넘어 환자의 마음까지 치유하겠습니다.</h5>
@@ -87,7 +87,7 @@
                     <img th:src="@{/assets/images/main1.jpg}" class="d-block w-100" alt="..." id="banner">
                     <div class="carousel-caption d-none d-md-block" style="padding-bottom:130px;padding-left:-20px">
                         <h2 class="display-5 fw-bolder text-white mb-2">
-                            의료전문인을 위한 <br>정보, 교육, 연구 네트워크 서비스
+                            ESL-system 도입으로 <br>관리을 편리하게
                         </h2>
                         <h5 class="lead text-white mb-4">최상의 의료서비스를 위하여 함께 노력하겠습니다.</h5>
                     </div>
